--- a/app/views/ads/index.html.erb
+++ b/app/views/ads/index.html.erb
@@ -6,10 +6,10 @@
   <table class="table">
     <thead>
       <tr>
-        <th colspan="3">Título</th>
-        <th colspan="3">Preço</th>
-        <th colspan="3">ID OLX</th>
-        <th colspan="3">É novo?</th>
+        <th>Título</th>
+        <th>Preço</th>
+        <th>ID OLX</th>
+        <th>É novo?</th>
         <th colspan="3">Ações</th>
       </tr>
     </thead>
