added other search term

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   <body>
     <div id='title' class='container-fluid text-center'>
       <h1>Acompanhamento de Anúncios do OLX</h1>
-      <cite>Projetado para acompanhar Macbook Pro 15'</cite>
+      <cite>Projetado para acompanhar Macbook Pro</cite>
     </div>
     <div class='container-fluid'>
       <%= yield %>
