--- a/app/views/ads/index.html.slim
+++ b/app/views/ads/index.html.slim
@@ -28,3 +28,4 @@
             = link_to 'Ver anúncio ', ad.olx_url
             | |
             = link_to ' Destruir', ad, method: :delete, data: { confirm: 'Certeza?' }
+  = paginate @ads
